Sneak in a padding fix for scoreboard on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,6 +80,10 @@ html, body {
   .player-cards {
     min-height: 125px;
   }
+  
+  .scoreboard {
+    padding: 0 0 0 20px;
+  }
 }
 
 @media only screen and (max-width: 500px) {
